--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
       "mustache-express": "^1.2.1",
       "mustache": "0.3.1-dev",
       "couchdb": ">=0.1.2",
+      "marked": "^0.3.3",
+      "highlight": "^0.2.3",
       "request": "^2.55.0",
       "promised-io": "=0.2.3"
     }
