--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
       "body-parser": "^1.9.0",
       "mustache-express": "^1.2.1",
       "mustache": "0.3.1-dev",
-      "couchdb": ">=0.1.2",
+      "nano": "^6.1.3",
+      "busboy": "^0.2.9",
       "marked": "^0.3.3",
       "highlight": "^0.2.3",
-      "request": "^2.55.0",
-      "promised-io": "=0.2.3"
+      "request": "^2.55.0"
     }
 }
